# next-dashboard

inventory-dashboard/: .env.production  AUDIT_REPORT.md  CHANGES_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_SCRIPTS.md  DYNAMODB_MIGRATION_GUIDE.md  FRONTEND_DEPLOYMENT_S3_CLOUDFRONT.md  IAM_POLICIES_AND_EXAMPLES.md  MULTI_ACCOUNT_QUICK_START.md  MULTI_ACCOUNT_SETUP.md  MULTI_ACCOUNT_SUMMARY.md  QUICK_DEPLOY.md  SCRIPTS_CLEANUP_SUMMARY.md  member-account-role.yaml  test-payload.json
inventory-dashboard/backend/: README_PYTHON_VERSION.md  pyproject.toml  requirements.txt  response.json  samconfig.toml  setup_layer.sh  template.yaml
inventory-dashboard/backend/src/: refresh_handler.py
inventory-dashboard/backend/src/collectors/: base.py  eip_collector.py  eks_collector.py  rds_collector.py  s3_collector.py  sg_collector.py
inventory-dashboard/frontend/: .gitignore  AUTH_FLOW_FIX.md  CLOUDFRONT_SPA_CONFIG.md  COGNITO_SETUP.md  DEPLOYMENT_CHECKLIST.md  EC2_DEPLOYMENT_QUICK_START.md  FIX_403_CALLBACK_ERROR.md  FRONTEND_DEPLOYMENT.md  FRONTEND_S3_CLOUDFRONT_DEPLOYMENT.md  INFRASTRUCTURE_GUIDE.md  LOCALHOST_SETUP.md  LOCAL_DEVELOPMENT.md  QUICK_DEPLOY_S3.md  QUICK_DIAGNOSTIC.md  QUICK_FIX.md  QUICK_FIX_S3_CLOUDFRONT.md  TESTING_AUTH_FLOW.md  TROUBLESHOOTING_COGNITO.md  VERIFY_AUTHENTICATION.md  VERIFY_COGNITO.md  VERIFY_DEPLOYMENT.md  frontend-infrastructure.yaml  next.config.js  package-lock.json  package.json  setup-ec2-linux.sh  test-payload.json  test-refresh-payload.json
(+62 files in other folders)
